# practicum_ds

./: .gitignore  README.md  pyproject.toml
data_mart/: project.sql  readme.md
data_research_analysis/: project.ipynb
exploratory_data_analysis/: project.ipynb  readme.md
ml/decision_tree/: project.ipynb
ml/grad_boosting/: examples.ipynb
ml/grad_boosting/examples/: gb_models_research.ipynb  model_stacking.ipynb  regex.ipynb  text_vectorization.ipynb
ml/grad_boosting/project/: project.ipynb
ml/grad_boosting/projects/: car_pricing.ipynb  hotel_booking.ipynb  hotel_booking_cancellation.ipynb
ml/linear_regression/: project.ipynb
ml/log_regression/: project.ipynb
ml/multiclass_classification/: project.ipynb
ml/random_forest/: project.ipynb
ml/svm/: pipeline_best.joblib  project.ipynb
ml/unsupervised_learning/: dbscan.ipynb  examples.ipynb  k_means.ipynb  pca.ipynb  t_SNE.ipynb
ml/unsupervised_learning/project/: order_cancellation_risk.ipynb
python_data_analysis/exploratory_data_analysis/: project.ipynb
python_data_analysis/python_data_preprocessing/: project.ipynb
python_data_analysis/target_variable_analysis/: project.ipynb
python_data_preprocessing/: project.ipynb  readme.md
sql_ad_hoc/: project.sql  readme.md
sql_ad_hoc/data_mart/: project.sql
terminal/: create_search_backup.sh  script_customers.sh
user_loyalty_analysis/: project.ipynb  upload.sql
