[project]
name = "practicum-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "category-encoders>=2.6.4",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "phik>=0.12.5",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "regex>=2026.1.15",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
